kubernetes/daemonset.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: file-browser
  namespace: logging
spec:
  selector:
    matchLabels:
      name: file-browser
  template:
    metadata:
      labels:
        name: file-browser
    spec:
      serviceAccountName: file-browser
      volumes:
        - name: log-volume
          hostPath:
            path: /var/log
            type: ''
      containers:
      - name: file-browser
        image: lud2k/distributed-file-browser:1.0.0
        resources:
          limits:
            memory: 250Mi
          requests:
            cpu: 100m
            memory: 250Mi
        volumeMounts:
        - name: log-volume
          mountPath: /mnt/data
